--- a/action.yml
+++ b/action.yml
@@ -12,11 +12,14 @@ inputs:
     description: "Github repository token"
   target_url:
     description: "Target url location"
+  ref:
+    description: "Ref from where the deployment originates from"
   description:
     description: "Descriptive message about the deployment"
   environment:
     description: "The name of the environment for the deployment"
     default: "production"
+  
 outputs:
   deployment_id:
     description: "The ID of the created deployment"
